# flex-promo-builder

./: .gitignore  ROADMAP.md  manifest.json  package-lock.json  package.json  service-worker.js
.claude/: MASTER_CONTEXT.md
app/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/lib/: main.dart
app/lib/core/: theme.dart
app/lib/data/: sample_products.dart
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs  lib.rs
app/rust/src/api/: mod.rs  prom9.rs
assets/cards/: tokens.css
bridge/: server.cjs
desktop/: card-renderer.cjs  main.js  package-lock.json  package.json  preload.js
lib/: adapters.js  ai.js  cny.js  compositor.js  content.js  cutout.js  flex-builder.js  imagegen.js  imagehost.js  promo.js  promptkit.js  validate.js
prom9_core/: Cargo.toml
prom9_core/src/: jsutil.rs  lib.rs
prom9_core/tests/: golden.rs  port_parity.rs
prom9_core/tools/: gen-expected.mjs
sidecar/: README.md  pyproject.toml
sidecar/app/: main.py
sidecar/app/data/: health_claim_rules.json  promptkit.json
sidecar/app/routers/: ai.py  bridge.py  common.py  images.py  promptkit.py  risk.py
sidecar/app/services/: ai.py  cli_runner.py  cutout.py  export.py  imagegen.py  promptkit.py  risk.py
sidecar/tests/: conftest.py  test_ai.py  test_api.py  test_cutout.py  test_export.py  test_imagegen.py  test_promptkit.py  test_risk.py
sidepanel/: chat.html  chat.js  panel.css  panel.html  panel.js  state.js
test/: state.test.mjs
test/golden/: cases.mjs  fixtures.json  gen-fixtures.mjs  golden.test.mjs
(+37 files in other folders)
