[project]
name = "prom9-sidecar"
version = "0.1.0"
description = "Prom9 local sidecar (FastAPI) - replaces bridge/server.cjs. AI content, image gen, cutout, prompt kit, multi-size export, Thai health-claim risk checker."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pillow>=10.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
